--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,7 @@
 				<a onclick="toPage(this)" class="catalog-pages" id="page1" style="border-radius: 3px 3px 3px 3px;">1</a>
 				<a onclick="toPage(this)" class="catalog-pages" id="page2" style="border-radius: 3px 3px 3px 3px;">2</a>
 				<a onclick="toPage(this)" class="catalog-pages" id="page3" style="border-radius: 3px 3px 3px 3px;">3</a>
+				<a onclick="toPage(this)" class="catalog-pages" id="page4" style="border-radius: 3px 3px 3px 3px;">4</a>
 			</div>
       <div style="text-align: right;" class="item3">
 				<a onclick="plusSlides(1); nextSlide()" class="nav-arrow"><i class="fas fa-chevron-right"></i></a>
